# revenant

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: revenant.toml.example
crates/revenant-cli/: Cargo.toml
crates/revenant-cli/src/: cli.rs  main.rs  output.rs
crates/revenant-core/: Cargo.toml
crates/revenant-core/src/: check.rs  cleanup.rs  config.rs  error.rs  init.rs  lib.rs  metadata.rs  preflight.rs  restore.rs  retention.rs  snapshot.rs  systemd.rs
crates/revenant-core/src/backend/: mock.rs  mod.rs
crates/revenant-core/src/backend/btrfs/: ioctl.rs  mod.rs
crates/revenant-core/src/bootloader/: mod.rs  systemd_boot.rs
crates/revenant-core/src/efi/: mod.rs  sync.rs
crates/revenant-core/src/pkgmgr/: mod.rs  pacman.rs
crates/revenant-core/src/snapshot/: discovery.rs  id.rs  info.rs  mod.rs  operations.rs  target.rs
crates/revenant-core/tests/: loopback.rs
crates/revenant-core/tests/common/: mod.rs
crates/revenant-daemon/: Cargo.toml  README.md  dbus-interface.md
crates/revenant-daemon/src/: config_edit.rs  dbus.rs  errors.rs  main.rs  marshal.rs  mount.rs  polkit.rs  state.rs  watcher.rs
crates/revenant-gui/: Cargo.toml
crates/revenant-gui/src/: client.rs  dbus_thread.rs  main.rs  model.rs  proxy.rs
crates/revenant-gui/src/ui/: format.rs  mod.rs  snapshots.rs  strains.rs  toast.rs
crates/revenant-gui/src/ui/dialogs/: cleanup.rs  create.rs  delete.rs  mod.rs  restore.rs  retention.rs
data/: dev.sniner.Revenant.conf  dev.sniner.Revenant.policy  dev.sniner.Revenant.service  dev.sniner.RevenantGui.desktop  org.revenant.Daemon1.conf  org.revenant.Daemon1.service  org.revenant.policy  revenant-daemon.service
docs/design/: dbus-interface.md  gui-rework.md  gui-wireframes.md
packaging/arch/: .gitignore  PKGBUILD  revenant-gui.install  revenant.install
scripts/: create-test-vm.sh  start-test-vm.sh
tools/: create-test-vm.sh  lib-vm.sh  run-loopback-tests.sh  run-vm-tests.sh  start-test-vm.sh
