[package]
name = "revenant-cli"
description = "CLI frontend for the Revenant system snapshot tool"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "revenantctl"
path = "src/main.rs"

[dependencies]
revenant-core = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
