[package]
name = "revenant-daemon"
description = "Privileged D-Bus daemon backing revenant-gui"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "revenantd"
path = "src/main.rs"

[dependencies]
revenant-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
zvariant = { workspace = true }
